--- a/style.css
+++ b/style.css
@@ -20,6 +20,10 @@ a {
     display: flex;
 }
 
+.lower-header {
+    display: flex;
+}
+
 .logo {
     display: flex; 
     align-items: center;
@@ -63,4 +67,9 @@ a {
     align-self: center;
     justify-self: center;
     gap: 20px;
+}
+
+.intro {
+    font-size: 30px;
+    font-weight: 900;
 }
